fixed filter overlapping

--- a/css/ingredients.css
+++ b/css/ingredients.css
@@ -19,7 +19,7 @@
 
 .ingredients__btn{
     height: 40px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     /* align-self: center; */
 }
 
@@ -71,5 +71,11 @@ input[type="checkbox"]{
         min-height: 150px;
         overflow-y: auto;
     }
+
+    .recipe__filter{
+        margin-top: 50px; 
+    }
+
+
   }
 
